# .AI3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SETUP.md  setup-windows.ps1  setup-wsl.sh  test_syntax.rs
.github/: CI-README.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  esp32.yml
_examples/: QUICK_START_TESTING.md
_examples/esp32/: ESP32_IMPLEMENTATION_SUMMARY.md  ESP32_MINING_GUIDE.md  diagram.json  download_wokwi.ps1  download_wokwi.py  esp32_mining_demo.rs  simple_test.py  test_esp32_wokwi.py  wokwi.toml
_examples/esp32/addon/esp32/: ai3_miner.cpp  ai3_miner.h  tribechain_esp32.ino  tribechain_esp32_simple.ino
ai3-lib/: Cargo.toml
ai3-lib/src/: esp_compat.rs  lib.rs  mining.rs  operations.rs  tensor.rs
ai3-lib/src/esp_compat/: mod.rs
ai3-lib/src/esp_compat/codegen/: mod.rs
ai3-lib/src/esp_compat/config/: mod.rs
ai3-lib/src/esp_compat/devices/: mod.rs
ai3-lib/src/esp_compat/miners/: mod.rs
ai3-lib/src/esp_compat/tests/: mod.rs
ai3-lib/src/mining/: mod.rs
ai3-lib/src/mining/distributors/: mod.rs
ai3-lib/src/mining/miners/: mod.rs
ai3-lib/src/mining/results/: mod.rs
ai3-lib/src/mining/tasks/: mod.rs
ai3-lib/src/mining/tests/: mod.rs
ai3-lib/src/operations/: mod.rs
ai3-lib/src/operations/activation/: mod.rs
ai3-lib/src/operations/convolution/: mod.rs
ai3-lib/src/operations/matrix/: mod.rs
ai3-lib/src/operations/tests/: mod.rs
ai3-lib/src/operations/vector/: mod.rs
ai3-lib/src/tensor/: mod.rs
ai3-lib/src/tensor/data/: mod.rs
ai3-lib/src/tensor/shape/: mod.rs
ai3-lib/src/tensor/tests/: mod.rs
ai3-lib/src/tensor/utils/: mod.rs
contracts/: Cargo.toml
contracts/src/: contracts.rs  lib.rs  liquidity.rs  staking.rs  tokens.rs  vm.rs
core/: Cargo.toml
core/src/: block.rs  blockchain.rs  error.rs  lib.rs  storage.rs  transaction.rs
mining/: Cargo.toml
mining/src/: ai3_mining.rs  consensus.rs  difficulty.rs  lib.rs  miner.rs  pool.rs  proof_of_work.rs
network/: Cargo.toml
network/src/: lib.rs
src/: esp32_miner.rs  lib.rs  main.rs  miner.rs
wiki/: AI3-Tensor-Engine.md  ESP32-Mining-Guide.md  Hardware-Requirements.md  Home.md  Token-System-Overview.md
