[package]
name = "tribechain"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain - AI-Powered Blockchain with Tensor Mining"
license = "MIT"

[workspace]
members = [
    "core",
    "mining",
    "contracts",
    "network",
    "ai3-lib"
]

[dependencies]
# Workspace members
tribechain-core = { path = "core" }
tribechain-mining = { path = "mining" }
tribechain-contracts = { path = "contracts" }
tribechain-network = { path = "network" }
ai3-lib = { path = "ai3-lib" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
rocksdb = "0.21"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Math for AI3
nalgebra = "0.32"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "tribechain"
path = "src/main.rs"

[[bin]]
name = "ai3-miner"
path = "src/miner.rs"

[[example]]
name = "esp32_mining_demo"
path = "examples/esp32_mining_demo.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 