[package]
name = "ai3-lib"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "AI3 tensor operation library for TribeChain"

[dependencies]
tribechain-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
ndarray = "0.15"
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] } 