[package]
name = "tribechain-contracts"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain smart contracts and virtual machine"

[dependencies]
tribechain-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
thiserror = "1.0" 