[package]
name = "tribechain-core"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain core blockchain functionality"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rocksdb = "0.21" 