[package]
name = "tribechain-core"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain core blockchain functionality"

[features]
default = ["storage"]
storage = ["rocksdb"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rocksdb = { version = "0.21", optional = true } 