[package]
name = "tribechain-mining"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain mining and consensus algorithms"

[dependencies]
tribechain-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] } 