[package]
name = "tribechain-mining"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain mining and consensus algorithms"

[dependencies]
tribechain-core = { path = "../core" }
ai3-lib = { path = "../ai3-lib" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8" 