[package]
name = "tribechain-network"
version = "0.1.0"
edition = "2021"
authors = ["BitTribe"]
description = "TribeChain peer-to-peer networking"

[dependencies]
tribechain-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0" 